--- a/StandaloneExample/StandaloneExample.csproj
+++ b/StandaloneExample/StandaloneExample.csproj
@@ -9,4 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Terminal.Gui" Version="0.17.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Screens\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Screens\EmptyClass.cs" />
+  </ItemGroup>
 </Project>
