--- a/KrateTUI.csproj
+++ b/KrateTUI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="7.0.1-beta3" />
     <PackageReference Include="Terminal.Gui" Version="0.17.0" />
   </ItemGroup>
   <ItemGroup>
